Activated Reset button. Simplified JS code. Made css responsive.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 	<div class="game-board">
 		<div class="button-container">
-			<button id="rock">ROCK</button>
-			<button id="paper">PAPER</button>
-			<button id="scissors">SCISSORS</button>
+			<button id="rock" class="throw-button">ROCK</button>
+			<button id="paper" class="throw-button">PAPER</button>
+			<button id="scissors" class="throw-button">SCISSORS</button>
 		</div>
 	</div>
 
