Centered buttons on mobile screen

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	<div class="after-math">
 		<img src="" alt="result gif">
-		<a class="reset action-button animate green">Play Again?</a>
+		<a class="action-button animate green reset">Play Again?</a>
 	</div>	
 	
 	<script src="js/jquery-2.0.0.js"></script>
