--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/styles.css">
-	<title>Practice JS</title>
+	<title>Rock Paper Scissors</title>
 </head>
 <body>
 	<div class="messages">
